--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "react-app-polyfill": "^1.0.6",
     "react-chartjs-2": "^2.9.0",
     "react-data-table-component": "^6.9.3",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^16.13.1",
+    "react-multivalue-text-input": "^0.6.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
+    "react-tag-input": "^6.4.3",
+    "react-tagsinput": "^3.19.0",
     "react-test-renderer": "^16.13.1",
     "reactstrap": "^8.4.1",
     "simple-line-icons": "^2.4.1",
