--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "react-scripts": "^3.4.1"
+    "css-loader": "^3.6.0",
+    "react-scripts": "^3.4.1",
+    "style-loader": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
