--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flag-icon-css": "^3.4.6",
     "font-awesome": "^4.7.0",
     "form-serialize": "^0.7.2",
+    "js-base64": "^2.6.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
